Solved BG Image Not Showing

--- a/assets/style.css
+++ b/assets/style.css
@@ -103,7 +103,7 @@ h2 {
     display: flex;
     width: 100%;
     height: 680px;
-    background-image: url(/assets/images/donation-header.jpg);
+    background-image: url(../assets/images/donation-header.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     padding: 0px;
@@ -116,11 +116,12 @@ h2 {
     justify-content: center;
     padding: 5% 20%;
     text-align: center;
+    
 }
 
 .bg-overlay {
     background: linear-gradient(360deg, #121212 0%, rgba(18, 18, 18, 0) 100%);
-    background-image: linear-gradient(360deg, #121212 0%, rgba(18, 18, 18, 0) 100%);
+
 }
 
 .hero-heading {
